src/objects/Data_Object__mdt.object
<CustomObject>
    <description>These are the items used for data loads.</description>
    <fields>
        <fullName>Field_to_Map__c</fullName>
        <description>API Field to Map</description>
        <label>API Field to Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping__c</fullName>
        <description>Mapping of the record.</description>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order of the record.</description>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_API_Name__c</fullName>
        <description>Parent API Name</description>
        <label>Parent API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Data Object</label>
    <pluralLabel>Data Object</pluralLabel>
</CustomObject>